2009-03-05 Pierre Wieser <pwieser@trychlos.org>

	* nact/nact-tree-model-dnd.c (drop_inside):
	Split to three functions to better readibility.
	Fix drop inside an empty menu.
	Fix drop into a non writable parent.

	* src/api/na-iio-provider.h: Add a comment.

	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h (na_io_provider_get_return_code_label):
	New function.

	* src/nact/nact-window.c (nact_window_save_item):
	Better error message.

	* src/nact/nact-export-ask.c (on_base_runtime_init_dialog):
	Set more clear label, whether the item be a label or an action.

	* src/nact/nact-tree-model-dnd.c (get_xds_atom_value):
	Remove debug traces after validation both on 32 and 64 bits systems.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c
	(na_core_utils_slist_join_at_end): New function.

	* src/api/na-iio-provider.h: Fix typo in comment.

	* src/nact/nact-main-menubar.c (on_delete_activated):
	Do not delete a tree if at least one item is not writable.

	* src/nact/nact-tree-model-dnd.c (get_xds_atom_value):
	Fix 64 bits value.

	* src/plugin-menu/nautilus-actions.c
	(create_item_from_menu): Add a trace on weak notify.

2009-03-04 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-action.c (instance_init):
	* src/core/na-object-menu.c (instance_init):
	Rather create the 'Type' box here than in read_start().

2009-03-03 Pierre Wieser <pwieser@trychlos.org>

	* src/core/Makefile.am:
	* src/nact/Makefile.am: Fix make distcheck.

	* po/POTFILES.in: Updated.

	Rename the NAIConditions interface to NAIContextConditions
	(hopefully, there will be a NAIContextParameters some day :)).

	* src/core/na-iconditions-factory.c:
	Renamed as src/core/na-icontext-conditions-factory.c.

	* src/core/na-iconditions.c:
	Renamed as src/core/na-icontext-conditions.c.

	* src/api/na-iconditions.h:
	Renamed as src/core/na-icontext-conditions.h.

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-object-profile.c: